# gasbubbles

./: .gitignore  Developer Command Prompt for VS.lnk  README.md  pyproject.toml
ipynb/: rising_bubble.ipynb
python/: meson.build
