# SPDX-FileCopyrightText: 2026 Peter Urban, Urcoustics
#
# SPDX-License-Identifier: CC0-1.0

# Build configuration for gasbubbles

[build-system]
requires = [
    'meson-python >= 0.15.0',
    'meson >= 1.2.3',
    'pyproject-metadata',
    'ninja >= 1.10',
    'numpy >= 2.0',
]
build-backend = 'mesonpy'

[project]
name = 'gasbubbles'
dynamic = [
    'version',
]
description = 'Gas bubble acoustic backscattering and dissolution models for underwater acoustics research.'
readme = 'README.md'
license = { file = 'LICENSE' }
keywords = [
    'acoustics',
    'bubbles',
    'backscatter',
    'sonar',
    'methane',
    'ocean',
    'seep',
    'hydroacoustics',
    'dissolution',
]
authors = [
    {name = 'Peter Urban', email = 'peter.urban@urcoustics.com'}
]


requires-python = '>=3.11, <3.15'
dependencies = [
    'numpy >= 1.26.0',
    'scipy >= 1.10.0',
    'matplotlib >= 3.6.0', "echosms>=0.17.0,<0.18", "jupyterlab-execute-time>=3.3.0,<4",
]

[project.optional-dependencies]
echosms = [
    'echosms',
]
test = [
    'pytest >= 7.0',
]
dev = [
    'pytest >= 7.0',
    'echosms',
]

[project.urls]

# -- cibuildwheel options ---
[tool.cibuildwheel]
skip = 'pp* *musllinux*'
test-requires = 'pytest'
test-command = 'cd {project} && pytest'

# -- pytest options ---
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "python/tests",
]

# -- meson-python options ---
[tool.meson-python.args]
setup = ["--default-library=static"]
compile = []
install = ['--tags=runtime,python-runtime']

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.dependencies]
jupyterlab = ">=4.5.3,<5"
pip = ">=25.3,<26"
pytest = ">=9.0.2,<10"
ipympl = ">=0.10.0,<0.11"
tqdm = ">=4.67.1,<5"
pandas = ">=3.0.0,<4"
xarray = ">=2024.1.0"
compilers = ">=1.0"
meson-python = ">=0.19.0,<0.20"
ninja = ">=1.13.2,<2"
netcdf4 = ">=1.7.4,<2"
nbmake = ">=1.5.5,<2"
pkg-config = ">=0.29.2,<0.30"
python = "3.14.*"
 
# Workaround for conda-forge flang-activation bug on Windows:
# The activation script passes clang_rt.builtins path with -Wl,-defaultlib: which
# MSVC's link.exe ignores. Adding the dir to LIB lets the linker find it.
# When updating flang version, update the "19" in the path to match.
# See: https://github.com/conda-forge/flang-activation-feedstock/issues/22
[tool.pixi.target.win-64.activation.env]
LIB = "%CONDA_PREFIX%\\lib\\clang\\19\\lib\\windows;%LIB%"

# Note: We don't use pixi pypi-dependencies for editable installs with meson-python
# because it caches temporary build tool paths. Use 'pixi run dev-install' instead.


[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
echosms = { features = ["echosms"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]
install-tamoc = "pip install --no-build-isolation --editable subprojects/tamoc"
init = { cmd = "pip install --no-build-isolation --editable .", depends-on = ["install-tamoc"] }
test = { cmd = "pytest python/tests/", depends-on = ["init"] }
jupyter = { cmd = "jupyter lab ipynb", depends-on = ["init"] }
test_notebooks = "python test_notebooks.py"
clean_notebooks = "python clean_notebooks.py"

[tool.pixi.target.win-64.dependencies]
vc = ">=14.3,<15"
